[gd_scene load_steps=8 format=3 uid="uid://06i8o0pf3m01"]

[ext_resource type="Script" path="res://scripts/Menu.gd" id="1_i65hd"]
[ext_resource type="Texture2D" uid="uid://bnk8a04qieqsc" path="res://graphics/Texture/menu_box_1.png" id="2_8icgy"]
[ext_resource type="Texture2D" uid="uid://dbj3grnaudyu5" path="res://graphics/BackgroundsWallpapers/goku_and_bulma_need_to_talk_to_you_about_your_extended_car_warranty.png" id="2_m0xsx"]
[ext_resource type="Texture2D" uid="uid://cgdjlisif6b8" path="res://graphics/BackgroundsWallpapers/grand_priest_pays_his_child_support.png" id="3_tmci1"]
[ext_resource type="Texture2D" uid="uid://dih1ur31n0ny5" path="res://graphics/BackgroundsWallpapers/snowball_and_his_magic_juice.png" id="4_or4o2"]
[ext_resource type="FontFile" uid="uid://dv0dtuuvlgalx" path="res://graphics/fonts/upheavtt.ttf" id="5_meqxe"]

[sub_resource type="LabelSettings" id="LabelSettings_ktrc8"]
font_size = 42
font_color = Color(1, 0.592157, 0.396078, 1)
outline_size = 6
outline_color = Color(0, 0, 0, 1)
shadow_size = 9
shadow_color = Color(0, 0, 0, 1)

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
script = ExtResource("1_i65hd")

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_m0xsx")

[node name="TextureRect2" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_tmci1")

[node name="TextureRect3" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_or4o2")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
modulate = Color(1, 0.592157, 0.396078, 0.52549)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -54.0
offset_top = -79.0
offset_right = 54.0
offset_bottom = 79.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
texture = ExtResource("2_8icgy")
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.454688
anchor_top = 0.417391
anchor_right = 0.545313
anchor_bottom = 0.582609
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 30

[node name="Play" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.243137, 1, 1, 1)
theme_override_fonts/font = ExtResource("5_meqxe")
text = "Play"
flat = true

[node name="Options" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.243137, 1, 1, 1)
theme_override_fonts/font = ExtResource("5_meqxe")
text = "Options"
flat = true

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.243137, 1, 1, 1)
theme_override_fonts/font = ExtResource("5_meqxe")
text = "Quit"
flat = true

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.246875
anchor_top = 0.235
anchor_right = 0.499
anchor_bottom = 0.235
offset_left = -20.0
offset_top = -0.200012
offset_right = 342.28
offset_bottom = 38.8
grow_horizontal = 2
theme_override_fonts/font = ExtResource("5_meqxe")
text = "Dragon Ball Universe The Game"
label_settings = SubResource("LabelSettings_ktrc8")
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="MarginContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
